--- a/style.css
+++ b/style.css
@@ -1,33 +1,53 @@
-body {
-  background-image: url("./Images/cabane_desert.jpeg");
-  background-position: center;
+body{
+  background-image:url("./Images/escalatorMod.jpg");
+  background-attachment:fixed;
   background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-}
-
-.error {
-  color: red;
+  background-position: bottom;
 
 }
-span {
-  text-decoration: underline;
-}
-.big {
-  font-size: 72px;
-  text-align: right;
-  /*margin-top: 0;
-  margin-right: 100px;
-  margin-bottom: 0;
-  margin-left: 0;*/
 
-  margin: 0 100px 0 0;
-}
-
-.exemple {
+.BigTxt{
+  font-family: 'Libre Barcode 39 Text', cursive;
+  color : #E8143B;
+  font-size: 45px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 270px;
+  margin-bottom: auto;
   display: block;
-  background: white;
-  border: 1px solid red;
-  padding: 25px;
-  margin: 150px;
+  padding: 0px;
 }
+
+.SmallTxt{
+  font-family: 'Roboto Mono', monospace;
+  color : #E8143B;
+  font-size: 15px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  padding: 0px;
+/*  margin-left: 765px;
+  margin-top: 470px;*/
+}
+.link{
+  font-family: 'Roboto Mono', monospace;
+  color : #E8143B;
+  font-size: 20px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+/*
+#textAnim h1 {
+
+  transition-property: all;
+  transition-duration: 4s;
+  transition-timing-function: ease;
+  color: white;
+}
+*/
